--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "csv-reader": "^1.0.12"
+    "csv-reader": "^1.0.12",
+    "csvtojson": "^2.0.10"
   }
 }
